--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ __pycache__/Prove05.cpython-38.pyc
 __pycache__/Team06.cpython-38.pyc
 books.txt
 books.txt:Zone.Identifier
+hr_system.txt
+life-expectancy.csv
