updated the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ books.txt
 books.txt:Zone.Identifier
 hr_system.txt
 life-expectancy.csv
+books_and_chapters.txt:Zone.Identifier
+books_and_chapters.txt
